--- a/BookStoreWebMvc/BookStoreWebMvc/bin/BookStoreWebMvc.dll.config
+++ b/BookStoreWebMvc/BookStoreWebMvc/bin/BookStoreWebMvc.dll.config
@@ -67,7 +67,7 @@
     </assemblyBinding>
   </runtime>
   <connectionStrings>
-    <add name="QLBansachEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-VI7NDRKV\SQLEXPRESS;initial catalog=QLBansach;integrated security=True;encrypt=False;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="QLBansachEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-DE6G2CH\SQLEXPRESS;initial catalog=QLBansach;integrated security=True;encrypt=False;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
